FIX: contrast for WCAG

--- a/style.css
+++ b/style.css
@@ -710,7 +710,7 @@ p {
 
 .cta-hero {
     margin-top: 22px;
-    color: #FFFFFF!important;
+    color: #FFFFFF !important;
     text-transform: uppercase;
     padding: 12px 28px 12px 28px;
     font-size: 16px;
@@ -760,6 +760,10 @@ h4 {
     color: #FFFFFF!important;
 }
 
+.black {
+    color: #000000 !important;
+}
+
 .portfolio-thumb {
     margin-bottom: 24px;
 }
@@ -801,7 +805,7 @@ h4 {
 
 .btn-atomic-tangerine {
     background: #F3976C;
-    color: #FFFFFF!important;
+    color: #000000!important;
 }
 
 .btn-atomic-tangerine:hover {
